Added 2 copy buttons. (Not yet functional. Will modify later)

--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
             <div class="row">
                 <p id="password-1"></p>
             </div>
+            <br>
+            <br>
+            <button id="copy" class="copy1">Copy</button>
 
             <div class="row">
                 <p id="password-2"></p>
             </div>
+            <br>
+            <br>
+            <button id="copy" class="copy2">Copy</button>
 
         </div>
 
